# pir8

./: .env.local.example  .gitignore  .npmrc  Anchor.toml  BUILD_AND_DEPLOY.md  CHANGELOG.md  CLEANUP_COMPLETE.md  DAY_2_COMPLETE.md  DEMO_VIDEO_SCRIPT.md  FINAL_STEPS.md  HACKATHON_SUBMISSION_CHECKLIST.md  INTEGRATION_GUIDE.md  MONOREPO_SETUP.md  README.md  VERCEL_FIX.md  deploy.md  jest.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  skills.md  tailwind.config.js  tmp_rovodev_ai_vs_ai_summary.md  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
.implementation/: FRONTEND_IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  SKILL_MECHANICS_IMPLEMENTATION_LOG.md  SKILL_MECHANICS_PLAN.md  SKILL_MECHANICS_SUMMARY.md
app/: globals.css  layout.tsx  page.tsx
docs/: AGENTIC_INFRASTRUCTURE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  FEASIBILITY.md  GETTING_STARTED.md  HACKATHON_STRATEGY.md  IMPLEMENTATION_PHASES.md  INDEX.md  INTEGRATION_GUIDE.md  MOBILE_ENHANCEMENT_ROADMAP.md  MOBILE_HACKATHON_READINESS.md  PHASE3_LAYOUT_EXTRACTION_COMPLETE.md  PHASE_1B_PROGRESS.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  (+11 more)
programs/pir8-game/: Cargo.toml
programs/pir8-game/src/: constants.rs  errors.rs  events.rs  instructions.rs  lib.rs  lib_single_file.rs  pirate_lib.rs
programs/pir8-game/src/instructions/: admin.rs  claim_winnings.rs  complete_game.rs  execute_item_effect.rs  gameplay.rs  initialize_config.rs  join_game.rs  make_move.rs  matchmaking.rs  mod.rs  start_game.rs
programs/pir8-game/src/state/: config.rs  game.rs  map.rs  mod.rs  player.rs
(+171 files in other folders)
